app/SowingMeAdminApi/sandbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sowingme-admin-api
  namespace: ws-sandbox
spec:
  selector:
    workload.user.cattle.io/workloadselector: deployment-ws-sandbox-sowingme-admin-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
