app/SowingMeAdminApi/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/creatorId: cwolsen
  labels:
    cattle.io/creator: norman
  name: internal-admin-api
  namespace: webservices-dev
  selfLink: /apis/networking.k8s.io/v1/namespaces/webservices-dev/ingresses/internal-admin-api
spec:
  rules:
  - host: internal-admin-api.dev.vsmedia.net
    http:
      paths:
      - backend:
          service:
            name: internal-admin-api
            port:
              number: 8080
        path: /
        pathType: Prefix
