app/SowingMeAdminApi/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/creatorId: cwolsen
  labels:
    cattle.io/creator: norman
  name: sowing-me-admin-api
  namespace: ws-prod
  selfLink: /apis/networking.k8s.io/v1/namespaces/ws-prod/ingresses/sowing-me-admin-api
spec:
  ingressClassName: nginx
  rules:
  - host: admin-api.sowing.me
    http:
      paths:
      - backend:
          service:
            name: sowing-me-admin-api
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
      - admin-api.sowing.me
      secretName: tls-wildcard-sowing-me-prod
status:
  loadBalancer:
    ingress:
      - hostname: kube-001.brainchurts.com
      - hostname: kube-002.brainchurts.com
      - hostname: kube-003.brainchurts.com
      - hostname: kube-004.brainchurts.com
